# risk-aware-compound-library-compression

./: .gitattributes  CITATION.cff  LICENSE  README.md  RELEASE_MANIFEST.json  REPOSITORY_PROFILE.md  pyproject.toml  requirements.txt
examples/: bace_scaffold_disjoint_sample.csv
manuscript/: main.tex  references.bib
results/: bace_fold0_training_overlap.json  bace_fold0_training_overlap.md  bace_overlap_controlled_eval.json  bace_overlap_controlled_eval.md  bace_scaffold_decision_replay.json  bace_scaffold_decision_replay.md  bace_scaffold_disjoint.csv  bace_structure_disjoint.csv  egfr_overlap_controlled_eval.json  egfr_overlap_controlled_eval.md  evidence_matrix.json  evidence_matrix.md  manuscript_source_metrics.json  multifold_training_summary.json  multifold_training_summary.md  operational_validation.json  operational_validation.md  statistical_results.json  statistical_results.md
scripts/: build_evidence_matrix.py  build_manuscript_figures.py  build_manuscript_source_snapshot.py  build_manuscript_tables.py  build_multifold_training_summary.py  build_operational_validation.py  build_statistical_results.py  evaluate_overlap_controlled_bace.py  evaluate_overlap_controlled_egfr.py  run_overlap_audit.py
src/stells_paper/: __init__.py  metrics.py  overlap_audit.py  parquet_overlap_audit.py  statistical_analysis.py
tests/: test_metrics.py  test_overlap_audit.py  test_statistical_analysis.py
