[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stells-paper"
version = "0.1.0"
description = "Reproducible evaluation tools for risk-aware compound-library compression."
requires-python = ">=3.10"

[project.optional-dependencies]
research = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "reportlab>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
